vpc/vpc-nlb.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoserver-vpc-nlb-us-east-1-service
  annotations:
    service.kubernetes.io/ibm-load-balancer-cloud-provider-enable-features: "nlb"
    service.kubernetes.io/ibm-load-balancer-cloud-provider-ip-type: "public"
    service.kubernetes.io/ibm-load-balancer-cloud-provider-zone: "us-east-1"
spec:
  type: LoadBalancer
  selector:
    app: echoserver-vpc-app
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  externalTrafficPolicy: Local
