vpc/vpc-private-alb.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoserver-private-vpc-alb
  annotations:
    service.kubernetes.io/ibm-load-balancer-cloud-provider-enable-features: "proxy-protocol"
    service.kubernetes.io/ibm-load-balancer-cloud-provider-ip-type: "private"
    service.kubernetes.io/ibm-load-balancer-cloud-provider-vpc-subnets: "<subnet_ID>"
    service.kubernetes.io/ibm-load-balancer-cloud-provider-zone: "us-east-1"
spec:
  type: LoadBalancer
  selector:
    app: echoserver-app
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
